<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_movie_maior"
        android:title="@string/maior"
        android:icon="@drawable/ic_baseline_movie_24"
        app:showAsAction="always"/>

</menu>