<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/imageMovieDetailImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/titulo"
            android:focusable="true"
            android:scaleType="fitXY"
            tools:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            layout="@layout/card_dados_basicos"/>


        <ImageButton
            android:id="@+id/imageButtonMovieDetailLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/ic_baseline_favorite_border_24"
            android:contentDescription="@string/like"
            app:layout_constraintBottom_toBottomOf="@+id/imageMovieDetailImage"
            app:layout_constraintEnd_toEndOf="@+id/imageMovieDetailImage" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
